fix flex wrap

--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -47,7 +47,8 @@
         flex-direction: row;
         align-items: center;
         width: 100%;
-        justify-content: space-between
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 
 }
